--- a/Capstone/src/app/order-form/order-form.component.html
+++ b/Capstone/src/app/order-form/order-form.component.html
@@ -5,7 +5,7 @@
     <img [src]="product?.image" alt="{{ product?.name }}" />
   </div>
   <div class="form-container">
-    <form>
+    <form (ngSubmit)="onSubmit()">
       <h6>Order Details</h6>
       <mat-form-field>
         <mat-label>Select Date*</mat-label>
@@ -27,24 +27,44 @@
           name="quantity"
         />
       </mat-form-field>
-      <h6>Enter your personal details</h6>
+      <h6>Enter your details</h6>
       <mat-form-field appearance="fill">
         <mat-label>Name</mat-label>
-        <input matInput type="text" [(ngModel)]="form.name" name="name" />
+        <input
+          matInput
+          type="text"
+          [(ngModel)]="form.name"
+          name="name"
+          required
+          maxlength="10"
+        />
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
-        <input matInput type="email" [(ngModel)]="form.email" name="email" />
+        <input
+          matInput
+          type="email"
+          [(ngModel)]="form.email"
+          name="email"
+          required
+          maxlength=""
+        />
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Phone</mat-label>
-        <input matInput type="tel" [(ngModel)]="form.phone" name="phone" />
+        <input
+          matInput
+          type="tel"
+          [(ngModel)]="form.phone"
+          name="phone"
+          required
+        />
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Address</mat-label>
         <input matInput type="text" [(ngModel)]="form.address" name="phone" />
       </mat-form-field>
-      <button mat-flat-button>Make Request</button>
+      <button mat-flat-button>Place Order</button>
     </form>
   </div>
 </div>
