--- a/Capstone/src/app/about/about.component.html
+++ b/Capstone/src/app/about/about.component.html
@@ -19,3 +19,4 @@
     Justice - where every bite is a taste of justice!
   </p>
 </div>
+<div class="elfsight-app-69c58923-97c0-4a2d-9f8a-9723ddb2a162" data-elfsight-app-lazy></div>
