--- a/Capstone/src/app/header/header.component.html
+++ b/Capstone/src/app/header/header.component.html
@@ -1,11 +1,15 @@
 <header class="flex">
   <h1>Baked Justice</h1>
+  
   <div>
     <img src="assets/images/Baked Justice.png" alt="logo" />
   </div>
+  
   <div>
     <a><span routerLink="/">Home</span></a>
     <a><span routerLink="/About-us">About</span></a>
     <a><span routerLink="/contact-us">Contact Us</span></a>
   </div>
+  
 </header>
+<div class="elfsight-app-542bc998-00bf-486a-904c-33f64db57706" data-elfsight-app-lazy></div>
