--- a/Capstone/src/app/contact-us/contact-us.component.html
+++ b/Capstone/src/app/contact-us/contact-us.component.html
@@ -26,5 +26,7 @@
     <a href="https://www.instagram.com/bakedjustice" target="_blank"
       >Instagram</a
     >
-  </div>
+</div>
+
+<iframe width="520" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=123%20Legal%20Ave%20Jackson+(Baked%20Justice)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='https://www.easybooking.eu/produkte/julia-hotelsoftware'>Hotelprogramme kleine Hotels</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=41d9c24ba4349611e83691bf7b45f12c9c27e6e1'></script>
 </div>
