--- a/Capstone/src/app/header/header.component.css
+++ b/Capstone/src/app/header/header.component.css
@@ -13,7 +13,7 @@ span {
 }
 
 img {
-  width: 160px;
+  width: 200px;
   /* margin-left: -30px; */
 }
 
@@ -51,4 +51,9 @@ button :hover {
 
 h1 {
   font-family: "Dancing Script", cursive;
+}
+
+
+h3{
+  font-size: 1.5em; 
 }
