--- a/Capstone/src/app/footer/footer.component.html
+++ b/Capstone/src/app/footer/footer.component.html
@@ -32,5 +32,6 @@
         <a href="/terms-of-use">Terms of Use</a>
       </p>
     </div>
+    <div class="elfsight-app-40462125-a7eb-4054-ab1c-d9f5ab6ffbc0" data-elfsight-app-lazy></div>
   </div>
 </footer>
